--- a/saas/components/_basic.scss
+++ b/saas/components/_basic.scss
@@ -20,12 +20,18 @@ p {
 a {
   text-decoration: none;
 }
-.container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+.container {    
+    max-width: 480px;
+    margin: 0 auto;
+    padding: 0 15px;
+
+  @media (min-width: 768px) {
+    max-width: 768px;
+  }
+
+  @media (min-width: 1600px) {
+    max-width: 1200px;
+  }
 }
 body {
   font-family: 'Roboto', sans-serif;
