--- a/saas/components/_advantages.scss
+++ b/saas/components/_advantages.scss
@@ -1,12 +1,27 @@
 .advantages {
+
   @extend %margin-top;
-  display: flex;
-  gap: 30px;
+  h3 {
+    text-align: center;
+  }
+  &__list {
+    @media (min-width: 768px) {
+      display: flex;
+      gap: 30px;
+    }
+  }
   &__item {
-    max-width: 270px;
+    width: 100%;
+
+  }
+  &__item:not(:last-child) {
+    margin-bottom: 30px;
+    @media (min-width: 768px) {
+      margin-bottom: 0;
+    }
   }
   &__card {
-    width: 270px;
+    width: 100%;
     height: 120px;
     border-radius: 4px;
     margin-bottom: 30px;
