--- a/saas/components/_footer.scss
+++ b/saas/components/_footer.scss
@@ -1,11 +1,16 @@
 .footer {
   background-color: $background-color;
+  width: 100%;
   @extend %margin-top;
   padding: 60px 0;
 
   &__container {
-    display: flex;
-    gap: 70px;
+    text-align: center;
+    @media (min-width: 768px) {
+      display: flex;
+      gap: 70px;
+      text-align: left;
+    }
   }
   &__logo {
     @extend %logo;
@@ -19,6 +24,7 @@
     }
   }
   &__address {
+    margin-bottom: 60px;
     color: $color-white;
     font-style: normal;
     font-size: 14px;
@@ -49,13 +55,24 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: $color-white;
-    margin-top: 12px;
     margin-bottom: 20px;
+
+     @media (min-width: 768px) {
+      margin-top: 12px;
+    }
+    
   }
   &__social-list {
     display: flex;
     gap: 10px;
+    justify-content: center;
+    margin-bottom: 60px;
     margin-top: 16px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 0;
+    }
+   
   }
   &__social-link {
     display: flex;
@@ -76,13 +93,17 @@
     fill: $color-white;
   }
   &__form {
-    display: flex;
+    @media (min-width: 768px) {
+      display: flex;
+    }
+
     align-items: center;
     gap: 12px;
   }
   &__input {
+    margin-bottom: 20px;
     padding: 15px 16px;
-    width: 358px;
+    width: 100%;
     height: 50px;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -91,6 +112,11 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: $color-white;
+
+    @media (min-width: 768px) {
+      margin-bottom: 0;
+      width: 358px;
+    }
   }
   &__button {
     display: inline-flex;
