--- a/saas/components/_team.scss
+++ b/saas/components/_team.scss
@@ -2,14 +2,20 @@
   @extend %margin-top;
   &__title {
     @extend %title;
+    text-align: center;
   }
   &__cards {
     display: flex;
+    flex-direction: column;
     gap: 30px;
-    text-align: center;
+    align-items: center;
+    @media (min-width: 768px) {
+     flex-direction: row;
+
+    }
   }
   &__item {
-    max-width: 270px;
+    width: 100%;
     padding-bottom: 30px;
     background-color: $color-white;
     border-bottom-left-radius: 4px;
@@ -25,6 +31,10 @@
     gap: 10px;
     margin-left: auto;
     margin-right: auto;
+  }
+  &__img {
+    width: 100%;
+    height: 100%;
   }
   &__button {
     display: block;
