--- a/saas/components/_clients.scss
+++ b/saas/components/_clients.scss
@@ -9,11 +9,15 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
+  &__item {
+    width: calc(50% - 15px);
+  }
   &__link {
-    padding: 16px 50px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+
     cursor: pointer;
     height: 92px;
     fill: $color-icons;
