--- a/saas/components/_clients.scss
+++ b/saas/components/_clients.scss
@@ -10,7 +10,10 @@
     justify-content: space-between;
   }
   &__item {
-    width: calc(50% - 15px);
+    @media (max-width: 767px) {
+      width: calc(50% - 15px);
+    }
+    
   }
   &__link {
     display: flex;
@@ -20,6 +23,7 @@
 
     cursor: pointer;
     height: 92px;
+    
     fill: $color-icons;
     border: 1px solid $color-icons;
     border-radius: 4px;
@@ -31,6 +35,7 @@
       border: 1px solid $accent-color;
       fill: $accent-color;
     }
+    
     @media (min-width: 768px) {
       width: 170px;
     }
