--- a/css/main.css
+++ b/css/main.css
@@ -31,10 +31,10 @@ a {
 }
 @media (min-width: 768px) {
   .container {
-    max-width: 768px;
+    width: 100%;
   }
 }
-@media (min-width: 1600px) {
+@media (min-width: 1200px) {
   .container {
     max-width: 1200px;
   }
@@ -64,8 +64,13 @@ p {
 .footer__logo, .header__logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   letter-spacing: 0.03em;
+}
+@media (min-width: 1200px) {
+  .footer__logo, .header__logo {
+    font-size: 26px;
+  }
 }
 
 .footer, .clients, .team, .services, .advantages {
@@ -75,14 +80,25 @@ p {
 .clients__title, .team__title, .services__title {
   color: #212121;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   letter-spacing: 0.03em;
   text-align: center;
   margin-bottom: 50px;
 }
+@media (min-width: 1200px) {
+  .clients__title, .team__title, .services__title {
+    font-size: 36px;
+  }
+}
 
 .header {
+  padding: 10px 15px;
   border-bottom: 1px solid #ececec;
+}
+@media (min-width: 481px) {
+  .header {
+    padding: 0;
+  }
 }
 .header__container {
   display: flex;
@@ -92,14 +108,6 @@ p {
 .header__nav {
   display: flex;
   align-items: center;
-}
-.header__burger {
-  margin-left: auto;
-}
-@media (min-width: 768px) {
-  .header__burger {
-    display: none;
-  }
 }
 .header__pages a {
   color: var(--headers-color);
@@ -150,8 +158,20 @@ p {
   display: flex;
   gap: 50px;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 12px;
   letter-spacing: 0.02em;
+}
+@media (min-width: 480px) {
+  .header__info {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+@media (min-width: 1200px) {
+  .header__info {
+    flex-direction: row;
+    font-size: 14px;
+  }
 }
 .header__item {
   color: #757575;
@@ -177,6 +197,101 @@ p {
   }
 }
 
+.menu {
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-left: 40px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+.menu.is-open {
+  transform: translateX(0);
+}
+@media (min-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
+.menu__button {
+  background-color: transparent;
+  border: none;
+}
+@media (min-width: 768px) {
+  .menu__open {
+    display: none;
+  }
+}
+.menu__close {
+  position: absolute;
+  top: 15px;
+  right: 30px;
+}
+.menu__close:hover {
+  color: #2196f3;
+}
+.menu__list {
+  font-weight: 500;
+  font-size: 40px;
+  letter-spacing: 0.02em;
+}
+.menu__page:not(:last-child) {
+  margin-bottom: 32px;
+}
+.menu__page a {
+  color: #212121;
+}
+.menu__page--select a {
+  color: #2196f3;
+}
+.menu__commun {
+  position: absolute;
+  bottom: 134px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  font-weight: 500;
+  font-size: 34px;
+  letter-spacing: 0.02em;
+}
+.menu__tel {
+  color: #2196f3;
+}
+.menu__mail {
+  color: #757575;
+  font-size: 24px;
+}
+.menu__social {
+  bottom: 48px;
+  left: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.menu__social a {
+  color: #2196f3;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 122%;
+  letter-spacing: 0.02em;
+}
+.menu__link:not(:last-child)::after {
+  content: "";
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  width: 22px;
+  height: 0px;
+  margin-left: 10px;
+}
+
 .banner {
   background-color: #2f303a;
   text-align: center;
@@ -200,7 +315,7 @@ p {
   text-transform: uppercase;
   text-align: center;
 }
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .banner__title {
     font-size: 44px;
     line-height: 136%;
@@ -252,10 +367,15 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 40px;
-  min-width: 528px;
-  min-height: 536px;
+  width: calc(100% - 30px);
   background-color: #fff;
   border-radius: 4px;
+}
+@media (min-width: 480px) {
+  .backdrop__modal {
+    min-width: 528px;
+    min-height: 536px;
+  }
 }
 .backdrop__title {
   margin-bottom: 12px;
@@ -344,19 +464,41 @@ p {
   padding: 12px 16px;
   font-family: "Roboto", sans-serif;
 }
+.backdrop__input-comment::-moz-placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.backdrop__input-comment::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
 .backdrop__agreements {
   margin-left: 12px;
   margin-top: 20px;
 }
 .backdrop__notation {
-  display: inline-flex;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
+  line-height: 1.71;
   color: #757575;
   cursor: pointer;
-  position: relative;
+  font-size: 12px;
+}
+@media (min-width: 480px) {
+  .backdrop__notation {
+    font-size: 14px;
+  }
+}
+.backdrop__text {
+  display: flex;
+  flex-wrap: wrap;
 }
 .backdrop__insert {
   -webkit-appearance: none;
@@ -375,26 +517,44 @@ p {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop__agree-icon {
-  position: absolute;
-  left: 2px;
-  width: 13px;
-  height: 12px;
+  display: none;
   fill: transparent;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (min-width: 480px) {
+  .backdrop__agree-icon {
+    position: absolute;
+    left: 2px;
+    width: 13px;
+    height: 12px;
+  }
 }
 .backdrop__insert:checked + .backdrop__box {
   background-color: #2196f3;
   border-color: #2196f3;
+}
+@media (max-width: 476px) {
+  .backdrop__insert:checked + .backdrop__box {
+    background-image: url(../../images/check.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
 }
 .backdrop__insert:checked ~ .backdrop__agree-icon {
   fill: #fff;
 }
 .backdrop__terms {
   margin-left: 0.5em;
+  font-size: 12px;
   color: #2196f3;
   text-decoration: underline;
   -webkit-text-decoration-skip-ink: none;
           text-decoration-skip-ink: none;
+}
+@media (min-width: 480px) {
+  .backdrop__terms {
+    font-size: 14px;
+  }
 }
 .backdrop__submit {
   display: block;
@@ -421,11 +581,22 @@ p {
 @media (min-width: 768px) {
   .advantages__list {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
+  }
+}
+@media (min-width: 1200px) {
+  .advantages__list {
+    flex-wrap: nowrap;
   }
 }
 .advantages__item {
   width: 100%;
+}
+@media (min-width: 768px) {
+  .advantages__item {
+    width: calc(50% - 15px);
+  }
 }
 .advantages__item:not(:last-child) {
   margin-bottom: 30px;
@@ -446,7 +617,7 @@ p {
   align-items: center;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1199px) {
   .services {
     display: none;
   }
@@ -481,13 +652,20 @@ p {
 }
 .team__cards {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   gap: 30px;
   align-items: center;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team__cards {
     flex-direction: row;
+  }
+}
+@media (min-width: 1200px) {
+  .team__cards {
+    flex-direction: row;
+    flex-wrap: nowrap;
   }
 }
 .team__item {
@@ -497,6 +675,11 @@ p {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+}
+@media (min-width: 768px) {
+  .team__item {
+    width: calc(50% - 15px);
+  }
 }
 .team__list {
   fill: #afb1b8;
@@ -544,9 +727,19 @@ p {
   gap: 30px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
-@media (max-width: 767px) {
+@media screen and (min-width: 1200px) {
+  .clients__list {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients__list {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+  }
+}
+@media (max-width: 768px) {
   .clients__item {
     width: calc(50% - 15px);
   }
@@ -567,21 +760,34 @@ p {
   border: 1px solid #2196f3;
   fill: #2196f3;
 }
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .clients__link {
     width: 170px;
   }
 }
 
 .footer {
+  padding: 60px 0;
+  margin-top: 60px;
   background-color: #2f303a;
   width: 100%;
-  padding: 60px 0;
+}
+@media (min-width: 1199px) {
+  .footer {
+    margin-top: 94px;
+  }
 }
 .footer__container {
   text-align: center;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
+@media (min-width: 1199px) {
   .footer__container {
     display: flex;
     gap: 70px;
@@ -679,6 +885,7 @@ p {
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-size: 14px;
   line-height: 1.71;
@@ -724,12 +931,19 @@ p {
 }
 
 .portfolio {
-  padding: 94px 0;
+  padding-top: 60px;
 }
 .portfolio__buttons-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
-  justify-content: center;
+  margin-bottom: 40px;
+}
+@media (min-width: 768px) {
+  .portfolio__buttons-list {
+    justify-content: center;
+    margin-bottom: 0;
+  }
 }
 .portfolio__button {
   background-color: #f5f4fa;
@@ -742,10 +956,14 @@ p {
   line-height: 162%;
   letter-spacing: 0.03em;
   text-align: center;
-  margin-bottom: 50px;
   padding: 6px 22px;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (min-width: 768px) {
+  .portfolio__button {
+    margin-bottom: 50px;
+  }
 }
 .portfolio__button:hover, .portfolio__button:focus {
   background-color: #2196f3;
@@ -753,10 +971,21 @@ p {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
   border: 1px solid #2196f3;
 }
+.portfolio__button--select {
+  background-color: #2196f3;
+  color: #fff;
+}
 .portfolio__cards {
   display: flex;
   gap: 30px;
   flex-wrap: wrap;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio__cards {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 30px;
+  }
 }
 .portfolio__element {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -786,6 +1015,8 @@ p {
 }
 .portfolio__img {
   display: block;
+  width: 100%;
+  height: 100%;
 }
 .portfolio__under-cover {
   position: relative;
