--- a/saas/components/_advantages.scss
+++ b/saas/components/_advantages.scss
@@ -1,5 +1,4 @@
 .advantages {
-
   @extend %margin-top;
   h3 {
     text-align: center;
@@ -7,12 +6,18 @@
   &__list {
     @media (min-width: 768px) {
       display: flex;
+      flex-wrap: wrap;
       gap: 30px;
+    }
+    @media (min-width: 1200px) {
+      flex-wrap: nowrap;
     }
   }
   &__item {
     width: 100%;
-
+    @media (min-width: 768px) {
+      width: calc(50% - 15px);
+    }
   }
   &__item:not(:last-child) {
     margin-bottom: 30px;
