--- a/saas/components/_backdrop.scss
+++ b/saas/components/_backdrop.scss
@@ -19,8 +19,12 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 40px;
-    min-width: 528px;
-    min-height: 536px;
+    width: calc(100% - 30px);
+    @media (min-width: 480px) {
+      min-width: 528px;
+      min-height: 536px;
+    }
+
     background-color: $color-white;
     border-radius: 4px;
   }
@@ -117,73 +121,105 @@
     padding: 12px 16px;
     font-family: 'Roboto', sans-serif;
   }
+  &__input-comment::placeholder {
+    font-weight: 400;
+    font-size: 14px;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
   &__agreements {
     margin-left: 12px;
-  margin-top: 20px;
+    margin-top: 20px;
   }
   &__notation {
-    display: inline-flex;
-  align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: $light-grey-color;
-  cursor: pointer;
-  position: relative;
+    position: relative;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
+    letter-spacing: 0.03em;
+    line-height: 1.71;
+    color: $light-grey-color;
+    cursor: pointer;
+
+    font-size: 12px;
+    @media (min-width: 480px) {
+      font-size: 14px;
+    }
+  }
+  &__text {
+    display: flex;
+    flex-wrap: wrap;
   }
   &__insert {
     appearance: none;
-  position: absolute;
-  opacity: 0;
+    position: absolute;
+    opacity: 0;
   }
+
   &__box {
-     display: block;
-  width: 16px;
-  height: 15px;
-  margin-right: 7px;
-  border: 2px solid $headers-color;
-  border-radius: 2px;
-  transition: background-color $animation-time $cubic,
-    border $animation-time $cubic;
+    display: block;
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+    border: 2px solid $headers-color;
+    border-radius: 2px;
+    transition: background-color $animation-time $cubic,
+      border $animation-time $cubic;
   }
   &__agree-icon {
-    position: absolute;
-  left: 2px;
-  width: 13px;
-  height: 12px;
-  fill: transparent;
-  transition: fill $animation-time $cubic;
+    display: none;
+    @media (min-width: 480px) {
+      position: absolute;
+      left: 2px;
+      width: 13px;
+      height: 12px;
+    }
+
+    fill: transparent;
+    transition: fill $animation-time $cubic;
   }
   &__insert:checked + &__box {
-  background-color: $accent-color;
-  border-color: $accent-color;
-}
+    background-color: $accent-color;
+    border-color: $accent-color;
+    @media (max-width: 476px) {
+      background-image: url(../../images/check.svg);
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+  }
 
-&__insert:checked ~ &__agree-icon {
-  fill: $color-white;
-}
+  &__insert:checked ~ &__agree-icon {
+    fill: $color-white;
+  }
   &__terms {
-  margin-left: 0.5em;
-  color: $accent-color;
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
-}
-&__submit {
+    margin-left: 0.5em;
+
+    font-size: 12px;
+    @media (min-width: 480px) {
+      font-size: 14px;
+    }
+    color: $accent-color;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+  }
+  &__submit {
     display: block;
-  margin: 30px auto 0;
-  width: 200px;
-  height: 50px;
-  border: none;
-  border-radius: 4px;
-  background-color: $accent-color;
-  color: $color-white;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  text-align: center;
-  cursor: pointer;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
-  transition: background-color $animation-time $cubic;
-}
+    margin: 30px auto 0;
+    width: 200px;
+    height: 50px;
+    border: none;
+    border-radius: 4px;
+    background-color: $accent-color;
+    color: $color-white;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    text-align: center;
+    cursor: pointer;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+    transition: background-color $animation-time $cubic;
+  }
 }
