--- a/saas/components/_basic.scss
+++ b/saas/components/_basic.scss
@@ -26,10 +26,10 @@ a {
     padding: 0 15px;
 
   @media (min-width: 768px) {
-    max-width: 768px;
+    width: 100%;
   }
 
-  @media (min-width: 1600px) {
+  @media (min-width: 1200px) {
     max-width: 1200px;
   }
 }
