--- a/saas/components/_clients.scss
+++ b/saas/components/_clients.scss
@@ -7,13 +7,19 @@
     gap: 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    @media screen and (min-width: 1200px) {
+      flex-direction: row;
+    
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      display: grid;
+      grid-template-columns: 33% 33% 33%;
+    }
   }
   &__item {
-    @media (max-width: 767px) {
+    @media (max-width: 768px) {
       width: calc(50% - 15px);
     }
-    
   }
   &__link {
     display: flex;
@@ -23,7 +29,8 @@
 
     cursor: pointer;
     height: 92px;
-    
+  
+
     fill: $color-icons;
     border: 1px solid $color-icons;
     border-radius: 4px;
@@ -35,8 +42,8 @@
       border: 1px solid $accent-color;
       fill: $accent-color;
     }
-    
-    @media (min-width: 768px) {
+
+    @media (min-width: 1200px) {
       width: 170px;
     }
   }
