--- a/saas/components/_footer.scss
+++ b/saas/components/_footer.scss
@@ -1,12 +1,25 @@
 .footer {
+  @extend %margin-top;
+
+  padding: 60px 0;
+  margin-top: 60px;
+
   background-color: $background-color;
   width: 100%;
-  @extend %margin-top;
-  padding: 60px 0;
+
+  @media (min-width: 1199px) {
+    margin-top: 94px;
+  }
 
   &__container {
     text-align: center;
-    @media (min-width: 768px) {
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+    @media (min-width: 1199px) {
       display: flex;
       gap: 70px;
       text-align: left;
@@ -57,10 +70,9 @@
     color: $color-white;
     margin-bottom: 20px;
 
-     @media (min-width: 768px) {
+    @media (min-width: 768px) {
       margin-top: 12px;
     }
-    
   }
   &__social-list {
     display: flex;
@@ -72,7 +84,6 @@
     @media (min-width: 768px) {
       margin-bottom: 0;
     }
-   
   }
   &__social-link {
     display: flex;
@@ -107,6 +118,7 @@
     height: 50px;
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     font-size: 14px;
     line-height: 1.71;
