--- a/saas/components/_header.scss
+++ b/saas/components/_header.scss
@@ -1,5 +1,8 @@
 .header {
- 
+  padding: 10px 15px;
+  @media (min-width: 481px) {
+    padding: 0;
+  }
   border-bottom: 1px solid $border-bottom-color;
   &__container {
     display: flex;
@@ -10,14 +13,6 @@
     display: flex;
     align-items: center;
   }
-
-  &__burger {
-    @media (min-width: 768px) {
-      display: none;
-    }
-    margin-left: auto;
-  }
-
   &__pages a {
     color: var(--headers-color);
     font-weight: 500;
@@ -35,6 +30,7 @@
     &-text--black {
       color: $color-black;
     }
+
   }
   &__pages {
     display: flex;
@@ -74,8 +70,17 @@
     display: flex;
     gap: 50px;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 12px;
     letter-spacing: 0.02em;
+
+    @media (min-width: 480px) {
+      flex-direction: column;
+      gap: 10px;
+    }
+    @media (min-width: 1200px) {
+      flex-direction: row;
+      font-size: 14px;
+    }
   }
   &__item {
     color: $light-grey-color;
