--- a/saas/components/_placeholder.scss
+++ b/saas/components/_placeholder.scss
@@ -1,7 +1,10 @@
 %logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
+  @media (min-width: 1200px) {
+    font-size: 26px;
+  }
   letter-spacing: 0.03em;
 }
 %margin-top {
@@ -10,7 +13,11 @@
 %title {
   color: $headers-color;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
+
+  @media (min-width: 1200px) {
+    font-size: 36px;
+  }
   letter-spacing: 0.03em;
   text-align: center;
   margin-bottom: 50px;
