--- a/saas/main.scss
+++ b/saas/main.scss
@@ -2,6 +2,7 @@
 @import './components/basic';
 @import './components/placeholder';
 @import './components/header';
+@import './components/mobile-menu';
 @import './components/banner';
 @import './components/backdrop';
 @import './components/advantages';
